heading level <jeudi#4482>

--- a/en/j/jeudi.1517.wikitext
+++ b/en/j/jeudi.1517.wikitext
@@ -3,7 +3,7 @@
 
 #The fourth day of the [[week]] (according to the ISO 8601 norm).
 
-==Translations==
+===Translations===
 *Blackfoot: [[Náámiksistsiko]]
 *de: [[Donnerstag]]
 *es: [[jueves]]
