--- a/en/r/représentant.1838.wikitext
+++ b/en/r/représentant.1838.wikitext
@@ -1,3 +1,5 @@
-(French)
-
-Representing
+==French==
+===Verb===
+#Present participle of ''representer'' = Representing
+===Noun===
+#Representative
