--- a/en/r/représentant.1838.wikitext
+++ b/en/r/représentant.1838.wikitext
@@ -1,5 +1,5 @@
 ==French==
 ===Verb===
-#Present participle of ''representer'' = Representing
+#Present participle of ''représenter'' = Representing
 ===Noun===
 #Representative
