added German translation <Yugoslavia#3200>

--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -3,5 +3,7 @@
 # Former country on the Balkan Peninsula (now [[Serbia and Montenegro]]).
 #:'''Translations'''
 #:*[[Dutch]]: [[Joegoslavië]]
+#:*[[German]]: [[Jugoslavien]]
+
 
 ''See:'' [[Countries of the world]]
