added German and Hebrew translation <United States of America#3195>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -4,5 +4,7 @@
 #:'''Translations'''
 #:*[[Dutch]]: [[Verenigde Staten van Amerika]]
 #:*[[French]]: [[États-Unis d'Amérique]]
+#:*[[German]]: [[Vereinigte Staaten von Amerika]]
+#:*[[Hebrew]]: [[ארצות הברית|ארה''ב]]
 
 ''See:'' [[Countries of the world]]
