added Hebrew trans <France#3202>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -5,5 +5,5 @@
 #:*[[Dutch]]: [[Frankrijk]]
 #:*[[French]]: France
 #:*[[German]]: [[Frankreich]]
-
+#:*[[Hebrew]]: [[צרפת]]
 ''See:'' [[Countries of the world]]
