<United States of America#3211>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -6,5 +6,5 @@
 #:*[[French]]: [[États-Unis d'Amérique]]
 #:*[[German]]: [[Vereinigte Staaten von Amerika]]
 #:*[[Hebrew]]: [[ארצות הברית]]
-
+#:*[[Spanish]]: [[Estados Unidos des América]]
 ''See:'' [[Countries of the world]]
