--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -2,6 +2,7 @@
 
 # Former country on the Balkan Peninsula (now [[Serbia and Montenegro]]).
 #:'''Translations'''
+#:*[[Esperanto]]: [[Jugoslavio]]
 #:*[[Dutch]]: [[Joegoslavië]]
 #:*[[German]]: [[Jugoslavien]]
 
