--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -3,6 +3,7 @@
 # Country in Western Europe.
 #:'''Translations'''
 #:*[[Dutch]]: [[Duitsland]]
+#:*[[Esperanto]]: [[Germanio]]
 #:*[[French]]: [[Allemagne]]
 #:*[[German]]: [[Deutschland]]
 
