+Esperanto <United States of America#3237>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -3,6 +3,7 @@
 # Country in North America.
 #:'''Translations'''
 #:*[[Dutch]]: [[Verenigde Staten van Amerika]]
+#:*[[Esperanto]]: [[Unuiĝintaj Ŝtatoj de Ameriko]]
 #:*[[French]]: [[États-Unis d'Amérique]]
 #:*[[German]]: [[Vereinigte Staaten von Amerika]]
 #:*[[Hebrew]]: [[ארצות הברית]]
