--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -7,5 +7,6 @@
 #:*[[French]]: [[États-Unis d'Amérique]]
 #:*[[German]]: [[Vereinigte Staaten von Amerika]]
 #:*[[Hebrew]]: [[ארצות הברית]]
+#:*[[Polish]]: [[Stany Zjednoczone Ameryki]], short: [[Stany Zjednoczone]], full: [[Stany Zjednoczone Ameryki Północnej]], colloquial: [[Stany]]
 #:*[[Spanish]]: [[Estados Unidos des América]]
 ''See:'' [[Countries of the world]]
