--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -3,7 +3,8 @@
 #:'''Translations'''
 #:*[[Dutch]]: Israel
 #:*[[German]]: Israel
-#:*[[Hebrew]]: [[ישראל]] 
+#:*[[Hebrew]]: [[ישראל]]
+#:*[[Polish]]: [[Izrael]]
 
 ''see:'' [[Countries of the world]]
 
