--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -6,5 +6,6 @@
 #:*[[Esperanto]]: [[Germanio]]
 #:*[[French]]: [[Allemagne]]
 #:*[[German]]: [[Deutschland]]
+#:*[[Polish]]: [[Niemcy]]
 
 ''See:'' [[Countries of the world]]
