--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -5,5 +5,6 @@
 #:*[[Dutch]]: [[Nieuw-Zeeland]]
 #:*[[French]]: [[Nouvelle Zélande]]
 #:*[[German]]: [[Neuseeland]]
+#:*[[Polish]]: [[Nowa Zelandia]]
 
 ''See:'' [[Countries of the world]]
