+pl <Czech Republic#6065>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -3,5 +3,6 @@
 # Country in Central Europe.
 #:'''Translations'''
 #:*[[Dutch]]: [[Tsjechië]]
+#:*[[Polish]]: [[Czechy]]
 
 ''See:'' [[Countries of the world]]
