--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -6,6 +6,7 @@
 #:*[[Esperanto]]: [[Germanio]]
 #:*[[French]]: [[Allemagne]]
 #:*[[German]]: [[Deutschland]]
+#:*[[Hebrew]]: [[גרמניה]]
 #:*[[Polish]]: [[Niemcy]]
 
 ''See:'' [[Countries of the world]]
