Recovered Hebrew translation. <France#3371>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -7,7 +7,7 @@
 #:*[[Finnish]]: [[Ranska]]
 #:*[[French]]: France
 #:*[[German]]: [[Frankreich]]
-#:*[[Hebrew]]: [[????]]
+#:*[[Hebrew]]: [[צרפת]]
 #:*[[Hungarian]]: Franciaország
 #:*[[Polish]]: [[Francja]]
 #:*[[Spanish]]: [[Francia]]
