I've checked it: Israël is the only Dutch translation. My mistake. <Israel#8223>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -6,7 +6,7 @@
 #:'''Translations'''
 #:*[[Chinese]]: [[以色列]]
 #:*[[Danish]]: Israel
-#:*[[Dutch]]: Israel, [[Israël]]??
+#:*[[Dutch]]: [[Israël]]
 #:*[[Esperanto]]: [[Israelo]]
 #:*[[Finnish]]: Israel
 #:*[[French]]: [[Israël]]
