--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -14,6 +14,8 @@
 
 *Dutch: [[Europees]]
 *French: [[européen]]
+*Interlingua: [[europee]]
+*Portuguese: [[europeu]]
 *Spanish: [[europeo]]
 
 ===Related words===
