--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -5,6 +5,9 @@
 ===Translations===
 
 *Dutch: [[Europeaan]]
+*Interlingua: [[europeo]]
+*Português: [[europeu]]
+*Spanish: [[europeo]]
 
 ==[[Adjective]]==
 
