--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -22,5 +22,7 @@ Plural
 ===Definition===
 #a geographical region, politcally independent from other regions.
 ===Translations===
-* English :[[country]]
-* German : [[Land]]
+* English: [[country]]
+* German: [[Land]]
+* Interlingua: [[pais]]
+* Portuguese: [[país]]
