--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -20,7 +20,7 @@ Plural
 </table>
 
 ===Definition===
-#a geographical region, politcally independent from other regions.
+#a geographical region, politically independent from other regions.
 ===Translations===
 * English: [[country]]
 * German: [[Land]]
