--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -6,6 +6,7 @@
 #:*[[Dutch]]: [[Tsjechië]]
 #:*[[Finnish]]: [[Tšekin tasavalta]], [[Tšekki]]
 #:*[[Interlngua]]: [[Republica Chec]]
+#:*[[Japanese]]: [[チェコ共和国]] (ちぇこきょうわこく, cheko-kyowakoku)
 #:*[[Polish]]: [[Czechy]]
 #:*[[Portuguese]]: [[República Tcheca]]
 
