zh; kr <United States of America#13735>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -3,6 +3,7 @@ Abbreviation: USA
 # Country in North America.
 #:'''Translations'''
 #:*[[Catalan]]: [[Estats Units d'Amèrica]] ''m''
+#:*[[Chinese]]: [[美國]] (měi guó)
 #:*[[Dutch]]: [[Verenigde Staten van Amerika]] ''f, pl'', abbreviation: VSA
 #:*[[Esperanto]]: [[Unuiĝintaj Ŝtatoj de Ameriko]]
 #:*[[Finnish]]: [[Amerikan Yhdysvallat]], short: [[Yhdysvallat]], very short: [[USA]]
@@ -11,6 +12,7 @@ Abbreviation: USA
 #:*[[Hebrew]]: [[ארצות הברית]]
 #:*[[Indonesian]]: [[Amerika Serikat]]
 #:*[[Japanese]]: [[米国]] (べいこく, beikoku)
+#:*[[Korean]]: [[미국]] South: [美國] North: [米國] (mi-gwuk)
 #:*[[Polish]]: [[Stany Zjednoczone Ameryki]], short: [[Stany Zjednoczone]], full: [[Stany Zjednoczone Ameryki Północnej]], colloquial: [[Stany]]
 #:*[[Russian]]: [[Соединённые Штаты Америки]], short: [[США]]
 #:*[[Spanish]]: [[Estados Unidos de América]] ''m'' abbreviation: EEUU
