--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -5,6 +5,7 @@
 #:*[[Catalan]]: [[República Txeca]] ''f''
 #:*[[Dutch]]: [[Tsjechië]]
 #:*[[Finnish]]: [[Tšekin tasavalta]], [[Tšekki]]
+#:*[[German]]: [[Tschechien]]
 #:*[[Interlngua]]: [[Republica Chec]]
 #:*[[Japanese]]: [[チェコ共和国]] (ちぇこきょうわこく, cheko-kyowakoku)
 #:*[[Polish]]: [[Czechy]]
