--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -5,6 +5,7 @@
 # Country in Western Europe. Official name: Federal Republic of Germany.
 #:'''Translations'''
 #:*[[Catalan]]: [[Alemanya]]
+#:*[[Cornish]]: [[Almayn]]
 #:*[[Chinese]]: [[德国]]
 #:*[[Czech]]: [[Německo]] ''n''
 #:*[[Danish]]: [[Tyskland]]
