--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -5,6 +5,7 @@
 # Country in Western Europe. Official name: French Republic.
 #:'''Translations'''
 #:*[[Catalan]]: [[França]] ''f''
+#:*[[Cornish]]: [[Pow Frynk]]
 #:*[[Chinese]]: [[法国]]
 #:*[[Danish]]: [[Frankrig]]
 #:*[[Dutch]]: [[Frankrijk]] ''n''
