--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -16,4 +16,5 @@ Abbreviation: USA
 #:*[[Polish]]: [[Stany Zjednoczone Ameryki]], short: [[Stany Zjednoczone]], full: [[Stany Zjednoczone Ameryki Północnej]], colloquial: [[Stany]]
 #:*[[Russian]]: [[Соединённые Штаты Америки]], short: [[США]]
 #:*[[Spanish]]: [[Estados Unidos de América]] ''m'' abbreviation: EEUU
+#:*[[Vietnamese]]: Hợp Chủng Quốc Hoa Kỳ/Mỹ
 ''See:'' [[Countries of the world]]
