--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -27,5 +27,6 @@
 #:*[[Russian]]: [[Франция]]
 #:*[[Spanish]]: [[Francia]] ''f''
 #:*[[Swedish]]: [[Frankrike]]
+#:*[[Vietnamese]]: Pháp
 
 ''See'': [[Countries of the world]]
