--- a/en/c/chosen.6834.wikitext
+++ b/en/c/chosen.6834.wikitext
@@ -10,3 +10,5 @@
 
 === Translations ===
 *[[Dutch]]: [[gekozen]]
+*[[Indonesian]]: [[pilih]], [[pilah]], [[pilih|memilih]], [[pilih|dipilih]], [[pilih|terpilih]]
+*[[Japanese]]: [[選んだ]] ([[えらんだ]], eranda),  [[選ばれた]] ([[えらばれた]], erabareta)
