--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -1,17 +1,32 @@
-(English)
-===Etymology===
+=== Etymology ===
 : from Middle French "''blonde''" (feminine).
-===atlernate spelling===
+=== alternate spelling ===
 :[[blond]]
 
 ===[[noun]]===
 #a person (usually a woman) of fair skin and hair.
 
 ===[[adjective]]===
-#of a blonde complexion (refering to a person)
+#of a blonde complexion (referring to a person)
 
 ===derived phrases===
 *[[ash blonde]], [[peroxide blonde]], [[platinum blonde]], [[strawberry blonde]].
 
 ===Related words===
 :''See'' [[Wiktionary_Appendix:Colours|Appendix:Colours]]
+
+==[[Dutch]]==
+
+=== Adjective ===
+
+'''blonde'''
+
+flexed form of [[blond]]
+
+==[[French]]==
+
+=== Adjective ===
+
+'''blonde''' ''f''
+
+# of [[light]] [[colour]], mostly said about light hair colour, but also possible about [[beer]]
