added nl meaning <blond#17407>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -1,6 +1,6 @@
-(English)
 ===Etymology===
 : from Middle French "''blond''" (masculine); "''blonde''" (feminine).
+
 ===atlernate spelling===
 :[[blonde]]
 
@@ -10,7 +10,17 @@
 
 ===[[adjective]]===
 #of a bleached, or pale golden colour.
-#of a blond complexion (refering to a person)
+#of a blond complexion (referring to a person)
 
 ===Related words===
 :''See'' [[Wiktionary_Appendix:Colours|Appendix:Colours]]
+
+----
+
+==[[Dutch]]==
+
+=== Adjective ===
+
+'''blond''' (blonde)
+
+# of light colour, usually said about light hair colour, but it can also refer to beer
