--- a/en/f/flaxen.6882.wikitext
+++ b/en/f/flaxen.6882.wikitext
@@ -1,6 +1,12 @@
-(English)
-===[[adjective]]===
+=== Adjective ===
+
+'''flaxen'''
+
 #made of, or resembling, [[flax]].
 #of a [[pale]] [[yellow]]ish [[brown]] [[colour]]; the colour of flax.
-===Related words===
+
+=== Related words ===
 :''See'' [[Wiktionary_Appendix:Colours|Appendix:Colours]]
+
+=== Translations ===
+*[[Dutch]]: [[vlaskleurig]]
