--- a/en/c/clung.6836.wikitext
+++ b/en/c/clung.6836.wikitext
@@ -10,6 +10,8 @@
 
 === Translations ===
 *[[Dutch]]: [[klampte]]
+*[[Indonesian]]: [[gantung|bergantung]], [[gantung|menggantung]], [[gantung|menggantungkan]]
+*[[Japanese]]: [[掛けた]] ([[かけた]], kaketa), [[ぶら下がった]] ([[ぶらさがった]], burasagatta), [[ぶら下げた]] ([[ぶらさげた]], burasageta)
 
 === Verb ===
 
@@ -19,3 +21,5 @@
 
 === Translations ===
 *[[Dutch]]: [[geklampt]]
+*[[Indonesian]]: [[gantung|bergantung]], [[gantung|menggantung]], [[gantung|menggantungkan]], [[gantung|digantung]], [[gantung|tergantung]], [[gantung|digantungkan]]
+*[[Japanese]]: [[掛けた]] ([[かけた]], kaketa), [[ぶら下がった]] ([[ぶらさがった]], burasagatta), [[ぶら下げた]] ([[ぶらさげた]], burasageta), [[掛けられた]] ([[かけられた]], kakerareta), [[ぶら下げられた]] ([[ぶらさげられた]], burasagerareta)
