--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -10,6 +10,8 @@
 
 === Translations ===
 *[[Dutch]]: [[komen]]
+*[[Indonesian]]: [[datang]], [[datang|mendatangi]], [[datang|mendatang]], [[datang|mendatangkan]]
+*[[Japanese]]: [[来る]] ([[くる]], kuru)
 
 === Verb ===
 
@@ -19,3 +21,5 @@
 
 === Translations ===
 *[[Dutch]]: [[gekomen]]
+*[[Indonesian]]: [[datang]], [[datang|didatangi]], [[datang|didatangkan]], [[datang|berdatangan]]
+*[[Japanese]]: [[来た]] ([[きた]], kita)
