--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -10,5 +10,5 @@
 
 === Translations ===
 *[[Dutch]]: [[kwam]]
-*[[Indonesian]]: [[datang]], [[datang|mendatangi]], [[datang|mendatang]], [[datang|mendatangkan]]
+*[[Indonesian]]: [[datang]], [[datang|mendatangi]], [[datang|mendatangkan]]
 *[[Japanese]]: [[来た]] ([[きた]], kita)
