--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -10,6 +10,8 @@
 
 === Translations ===
 *[[Dutch]]: [[voelde]], [[voelden]]
+*[[Indonesian]]: [[rasa|merasa]], [[rasa|merasakan]], [[anggap|menganggap]], [[anggap|beranggap]], [[anggap|beranggapan]]
+*[[Japanese]]: [[感じた]] ([[かんじた]], kanjita)
 
 === Verb ===
 
@@ -19,3 +21,5 @@
 
 === Translations ===
 *[[Dutch]]: [[gevoeld]]
+*[[Indonesian]]: [[rasa|merasa]], [[rasa|merasakan]], [[anggap|menganggap]], [[anggap|beranggap]], [[anggap|beranggapan]], [[rasa|terasa]]
+*[[Japanese]]: [[感じた]] ([[かんじた]], kanjita),  [[感じられた]] ([[かんじられた]], kanjirareta)
