--- a/en/f/fought.6880.wikitext
+++ b/en/f/fought.6880.wikitext
@@ -10,6 +10,8 @@
 
 === Translations ===
 *[[Dutch]]: [[vocht]], [[vochten]]
+*[[Indonesian]]: [[tarung]], [[tengkar]], [[serang]]
+*[[Japanese]]: [[戦った]] / [[闘った]] ([[たたかった]], tatakatta), [[対決]] ([[たいけつ]]した, taiketsu-shita), [[喧嘩]]した ([[けんか]]した, kenka-shita)
 
 === Verb ===
 
@@ -19,3 +21,5 @@
 
 === Translations ===
 *[[Dutch]]: [[gevochten]]
+*[[Indonesian]]: [[tarung]], [[tengkar]], [[serang]]
+*[[Japanese]]: [[戦った]] / [[闘った]] ([[たたかった]], tatakatta), [[対決]] ([[たいけつ]]した, taiketsu-shita), [[喧嘩]]した ([[けんか]]した, kenka-shita)
