id, ja <find#13977>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -6,10 +6,12 @@
 
 '''to find''' ([[found]], found)
 
-# to [[encounter]]
+# to [[encounter]], to [[discover]]
 
 === Translations ===
 *[[Dutch]]: [[vinden]]
 *[[French]]: [[trouver]]
 *[[German]]: [[finden]]
+*[[Indonesian]]: [[temu]], [[temu|menemukan]], [[temu|menemui]]
+*[[Japanese]]: [[見つける]], [[見つかる]], [[発見]]する ([[はっけん]]する, hakken-suru)
 *[[Spanish]]: [[encontrar]]
