add the other past tense and past participle <fit#19312>

--- a/en/f/fit.6886.wikitext
+++ b/en/f/fit.6886.wikitext
@@ -4,7 +4,7 @@
 
 === Verb ===
 
-'''to fit''' (fit, fit)
+'''to fit''' (fit / [[fitted]], fit / fitted)
 
 # to be right size
 # to tailor, change size
