--- a/en/c/clung.6836.wikitext
+++ b/en/c/clung.6836.wikitext
@@ -10,8 +10,16 @@
 
 === Translations ===
 *[[Dutch]]: [[klampte]]
-*[[Indonesian]]: [[gantung|bergantung]], [[gantung|menggantung]], [[gantung|menggantungkan]]
-*[[Japanese]]: [[掛けた]] ([[かけた]], kaketa), [[ぶら下がった]] ([[ぶらさがった]], burasagatta), [[ぶら下げた]] ([[ぶらさげた]], burasageta)
+*[[Indonesian]]: 
+** [[sangkut|menyangkut]]
+** [[sangkut|menyangkutkan]]
+** [[gantung|bergantung]]
+** [[gantung|menggantung]]
+** [[gantung|menggantungkan]]
+*[[Japanese]]: 
+** [[掛けた]] ([[かけた]], kaketa)
+** [[ぶら下がった]] ([[ぶらさがった]], burasagatta)
+** [[ぶら下げた]] ([[ぶらさげた]], burasageta)
 
 === Verb ===
 
@@ -21,5 +29,20 @@
 
 === Translations ===
 *[[Dutch]]: [[geklampt]]
-*[[Indonesian]]: [[gantung|bergantung]], [[gantung|menggantung]], [[gantung|menggantungkan]], [[gantung|digantung]], [[gantung|tergantung]], [[gantung|digantungkan]]
-*[[Japanese]]: [[掛けた]] ([[かけた]], kaketa), [[ぶら下がった]] ([[ぶらさがった]], burasagatta), [[ぶら下げた]] ([[ぶらさげた]], burasageta), [[掛けられた]] ([[かけられた]], kakerareta), [[ぶら下げられた]] ([[ぶらさげられた]], burasagerareta)
+*[[Indonesian]]: 
+** [[sangkut|menyangkut]]
+** [[sangkut|menyangkutkan]]
+** [[sangkut|tersangkut]]
+** [[sangkut|disangkutkan]]
+** [[gantung|bergantung]]
+** [[gantung|menggantung]]
+** [[gantung|menggantungkan]]
+** [[gantung|digantung]]
+** [[gantung|tergantung]]
+** [[gantung|digantungkan]]
+*[[Japanese]]:
+** [[掛けた]] ([[かけた]], kaketa)
+** [[ぶら下がった]] ([[ぶらさがった]], burasagatta)
+** [[ぶら下げた]] ([[ぶらさげた]], burasageta)
+** [[掛けられた]] ([[かけられた]], kakerareta)
+** [[ぶら下げられた]] ([[ぶらさげられた]], burasagerareta)
