--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -10,5 +10,13 @@
 
 === Translations ===
 *[[Dutch]]: [[klampen]]
-*[[Indonesian]]: [[gantung|bergantung]], [[gantung|menggantung]], [[gantung|menggantungkan]]
-*[[Japanese]]: [[掛ける]] ([[かける]], kakeru), [[ぶら下がる]] ([[ぶらさがる]], burasagaru), [[ぶら下げる]] ([[ぶらさげる]], burasageru)
+*[[Indonesian]]: 
+** [[sangkut|menyangkut]]
+** [[sangkut|menyangkutkan]]
+** [[gantung|bergantung]]
+** [[gantung|menggantung]]
+** [[gantung|menggantungkan]]
+*[[Japanese]]:
+** [[掛ける]] ([[かける]], kakeru)
+** [[ぶら下がる]] ([[ぶらさがる]], burasagaru)
+** [[ぶら下げる]] ([[ぶらさげる]], burasageru)
