link, spelling <flesh#23377>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -2,11 +2,11 @@
 :from Old High German "''fleisk''". 
 
 ===[[noun]]===
-#the soft tissue of the body, especially muscle and fat.
-#animal tissue, especially animal tissue used as food.
-#the human body as a physical entity.
+#the soft [[tissue]] of the [[body]], especially [[muscle]] and [[fat]].
+#[[animal]] tissue, especially animal tissue used as food.
+#the [[human]] body as a physical entity.
 #the skin of a human or animal.
-#the soft, often edible, parts of fruits or vegitables. 
+#the soft, often edible, parts of [[fruit]]s or [[vegetable]]s. 
 #a [[yellow]]ish [[pink]] [[colour]]; the colour of human skin.
 
 ===[[verb]]===
