--- a/en/い/いぬ.3614.wikitext
+++ b/en/い/いぬ.3614.wikitext
@@ -1,3 +1,5 @@
-==Japanese==
-いぬ (犬、inu)
-#[[dog]]
+== [[Japanese]] [[Furigana]] ==                             
+
+'''[[reading]]''': inu
+
+# [[犬]]: [[dog]]
