--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -9,10 +9,11 @@ US English SAMPA: /dZ3`:mIni/
 #:*[[Chinese]]: [[德国]]
 #:*[[Czech]]: [[Německo]] ''n''
 #:*[[Danish]]: [[Tyskland]]
-#:*[[Dutch]]: [[Duitsland]]
+#:*[[Dutch]]: [[Duitsland]] ''n''
 #:*[[Esperanto]]: [[Germanio]], [[Germanujo]]
 #:*[[Finnish]]: [[Saksa]]
 #:*[[French]]: [[Allemagne]]
+#:*[[Frisian]]: [[Dútslân]] ''n''
 #:*[[German]]: [[Deutschland]]
 #:*[[Greek]]: [[Γερμανία]]
 #:*[[Hebrew]]: [[גרמניה]]
