--- a/en/垗/垗.13083.wikitext
+++ b/en/垗/垗.13083.wikitext
@@ -33,8 +33,8 @@
 == [[Japanese]] [[Kanji]] ==
 
 * '''Readings'''
-** '''[[On]]''': [[てう]] (teu), [[でう]] (deu)
-** '''[[Kun]]''': [[はうりどころ]] (hauridokoro)
+** '''[[On]]''': [[ちょう]] (chō), [[じょう]] (jō)
+** '''[[Kun]]''': [[はいりどころ]] (hauridokoro)
 
 * '''Other info''':  
 
