Tsk, tsk, tsk!  Flesh is not the color of human skin! <flesh#57981>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -7,7 +7,7 @@
 #the [[human]] body as a physical entity.
 #the skin of a human or animal.
 #the soft, often edible, parts of [[fruit]]s or [[vegetable]]s. 
-#a [[yellow]]ish [[pink]] [[colour]]; the colour of human skin.
+#a [[yellow]]ish [[pink]] [[colour]]; the colour of some human skin.
 
 ===[[verb]]===
 #to put flesh on; to fatten.
