--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -8,12 +8,14 @@
 #a [[raisin]], when used in pudding or cake.
 :''See also'' Wikipedia: [[w:plum|plum]].
 ===Translations===
-*[[Dutch]]: [[]]
+*[[Dutch]]: [[pruimenboom]] (1), [[pruim]] (2), [[donkerrood]] (3), [[rozijn]] (5)
 *[[French]]: [[prune]] ''f''
-*[[Frisian]]: [[]]
+*[[Frisian]]: [[prom]] (2), [[rezyn]] (5)
 *[[German]]: [[Pflaume]] ''f''
 
 ===[[Adjective]]===
 #having a dark bluish-red colour.
 ===Related words===
 :''See'' [[Wiktionary_Appendix:Colours|Appendix:Colours]]
+===Translations===
+*[[Dutch]]: [[donkerrood]]
