--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -14,6 +14,7 @@ Abbreviation: USA
 #:*[[Japanese]]: [[米国]] (べいこく, beikoku)
 #:*[[Korean]]: [[미국]] South: [美國] North: [米國] (mi-gwuk)
 #:*[[Polish]]: [[Stany Zjednoczone Ameryki]], short: [[Stany Zjednoczone]], full: [[Stany Zjednoczone Ameryki Północnej]], colloquial: [[Stany]]
+#:*[[Romanian]]: [[Statele Unite ale Americii]], short: [[Statele Unite]], very short: [[SUA]]
 #:*[[Russian]]: [[Соединённые Штаты Америки]], short: [[США]]
 #:*[[Spanish]]: [[Estados Unidos de América]] ''m'' abbreviation: EEUU
 #:*[[Vietnamese]]: Hợp Chủng Quốc Hoa Kỳ, short: Mỹ, abbreviation: HK
