--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -8,6 +8,7 @@ Abbreviation: USA
 #:*[[Esperanto]]: [[Unuiĝintaj Ŝtatoj de Ameriko]]
 #:*[[Finnish]]: [[Amerikan Yhdysvallat]], short: [[Yhdysvallat]], very short: [[USA]]
 #:*[[French]]: [[États-Unis d'Amérique]] ''m, pl''
+#:*[[Frisian]]: [[Feriene Steaten fan Amearika]]
 #:*[[German]]: [[Vereinigte Staaten von Amerika]], short: [[USA]]
 #:*[[Hebrew]]: [[ארצות הברית]]
 #:*[[Indonesian]]: [[Amerika Serikat]]
