--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -22,6 +22,7 @@
 #:*[[Italian]]: [[Francia]] ''f''
 #:*[[Japanese]]: [[フランス]] (furansu)
 #:*[[Korean]]: [[프랑스]] (peurangseu)
+#:*[[Latin]]: [[Gallia]]
 #:*[[Norwegian]]: [[Frankrike]]
 #:*[[Polish]]: [[Francja]]
 #:*[[Portuguese]]: [[França]]
