--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -3,5 +3,6 @@
 
 === Translations ===
 *[[Dutch]]: [[mantel]] ''m'', [[jas]] ''m''
+*[[German]]: [[Hülle]] ''f'', [[Mantel]] ''m''
 *[[Indonesian]]: [[mantel]]
 *[[Japanese]]: [[コート]] (kōto)
