--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -2,5 +2,7 @@
 #'''Butter''', kind of [[fat]] made from cow [[milk]]
 
 === Translations ===
+*[[Bavarian]]: Budda ''m''
+*[[German]]: Butter ''f''
 *[[Japanese]]: [[バター]] (batā)
 *[[Polish]]: [[masło]]
