added definitions, related terms <find#25474>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -7,6 +7,10 @@
 '''to find''' ([[found]], found)
 
 # to [[encounter]], to [[discover]]
+# to decide, to form an [[opinion]]
+:#''to find the argument unsatisfactory''
+# to [[determine]] or [[judge]]
+:# ''the jury finds for the defendant''
 
 === Translations ===
 *[[Dutch]]: [[vinden]]
@@ -14,4 +18,8 @@
 *[[German]]: [[finden]]
 *[[Indonesian]]: [[temu]], [[temu|menemukan]], [[temu|menemui]]
 *[[Japanese]]: [[見つける]] (みつける, mitsukeru), [[見つかる]] ([[みつかる]], mitsukaru), [[発見]]する ([[はっけん]]する, hakken-suru)
-*[[Spanish]]: [[encontrar]]
+*[[Spanish]]: [[encontrar]] (1)
+
+=== Related terms ===
+[[found]] (past tense)
+[[find_out]]
