--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -20,6 +20,7 @@
 #:*[[Japanese]]: [[イスラエル]] (isuraeru)
 #:*[[Polish]]: [[Izrael]]
 #:*[[Portuguese]]: Israel
+#:*[[Romanian]]: [[Israel]] ''n''
 #:*[[Russian]]: [[Израиль]]
 #:*[[Spanish]]: Israel
 #:*[[Swedish]]: Israel
