--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -2,6 +2,7 @@ Abbreviation: USA
 
 # Country in North America.
 #:'''Translations'''
+#:*[[Bulgarian]]: [[Съединени Американски Щати]], short: [[САЩ]]
 #:*[[Catalan]]: [[Estats Units d'Amèrica]] ''m''
 #:*[[Chinese]]: simplified Chinese:[[美利坚合众国]] ( ''[[pinyin]]: Měilìjiān Hézhòngguó'' ), [[美国]] ( ''pinyin: Měiguó'' ) ; traditional Chinese:[[美利堅合衆國]] ( ''pinyin: Měilìjiān Hézhòngguó'' ), [[美國]] ( ''pinyin: Měiguó'') 
 #:*[[Dutch]]: [[Verenigde Staten van Amerika]] ''f, pl'', abbreviation: VSA
