--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -1,6 +1,7 @@
 ===Proper noun===
 # Country in Western Europe. Member state of the [[European Union]]. Official name: French Republic (République Française).
 ===Translations===
+*[[Breton]]: [[Frañs]] (State), [[Bro-C'hall]] (country)
 *[[Catalan]]: [[França]] ''f''
 *[[Cornish]]: [[Pow Frynk]]
 *[[Chinese]]: [[法国]]
