--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -4,6 +4,7 @@
 
 # Country in Oceania, to the East of [[Australia]]. Official name: New Zealand.
 #:'''Translations'''
+#:*[[Breton]]: [[Zeland-Nevez]]
 #:*[[Chinese]]: [[新西兰]]
 #:*[[Czech]]: [[Nový Zéland]]
 #:*[[Danish]]: New Zealand
