--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -7,6 +7,7 @@
 '''to cut''' (cut, cut)
 
 # to perform an [[incision]] with for example a [[knife]]
+# to separate from prior association
 
 === Translations ===
 *[[Dutch]]: [[snijden]]
