--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -2,9 +2,11 @@
 '''beautiful'''
 
 === Translations ===
+*[[Dutch]]: [[mooi]]
 *[[Esperanto]]: [[bela]]
 *[[Finnish]]: [[kaunis]]
 *[[French]]: [[beau]] ''m'', [[belle]] ''f''
+*[[Frisian]]: [[moai]], [[kreas]]
 *[[German]]: [[schön]]
 *[[Indonesian]]: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
 *[[Italian]]: [[bello]]
