--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -11,5 +11,6 @@
 *[[Indonesian]]: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
 *[[Italian]]: [[bello]]
 *[[Japanese]]: [[美しい]] ([[うつくしい]], utsukushii), [[綺麗]] ([[きれい]], kirei), [[素敵]] ([[すてき]], suteki)
+*[[Latin]]: [[pulcher]]
 *[[Russian]]: [[красивый]]
 *[[Swedish]]: [[vacker]]
