--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -22,6 +22,7 @@ US English SAMPA: /dZ3`:mIni/
 *[[German]]: [[Deutschland]]
 *[[Greek]]: [[Γερμανία]]
 *[[Hebrew]]: [[גרמניה]]
+*[[Hungarian]]: [[Németország]]
 *[[Indonesian]]: [[Jerman]]
 *[[Interlingua]]: [[Germania]]
 *[[Irish]]: [[an Ghearmáin]] ''f''
