--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -11,7 +11,7 @@
 *[[Finnish]]: [[kilpikonna]]
 *[[French]]: [[tortue]] ''f''
 *[[Frisian]]: [[skyldpod]]
-*[[German]]: [[Schildkroten]] ''f''
+*[[German]]: [[Schildkröte]] ''f''
 *[[Indonesian]]: [[kura-kura]]
 *[[Japanese]]: [[亀]] ([[かめ]], kame)
 *[[Portuguese]]: [[tartaruga]] ''f''
