--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -14,6 +14,7 @@
 *[[Finnish]]: [[kreivi]] (1)
 *[[French]]: [[comte]] ''m'' (1)
 *[[German]]: [[Graf]] ''m'' (1)
+*[[Polish]]: [[hrabia]] ''m'', [[hrabina]] ''f'' (1), [[odliczanie]] ''n'' (3)
 *[[Romanian]] [[conte]] ''m'' (1), [[numărare]] ''f'' (2), [[numărătoare]] ''f'' (3)
 *[[Russian]]: [[граф]] (1), [[счёт]] (2), [[отсчёт]] (3)
 *[[Spanish]]: [[conde]] ''m'' (1)
@@ -36,6 +37,7 @@
 *[[French]]: [[compter]]
 *[[German]]: [[zählen]]
 *[[Italian]]: [[contare]]
+*[[Polish]]: [[liczyć]]
 *[[Romanian]]: [[număra]]
 *[[Russian]]: [[считать]] ''imperf''
 *[[Spanish]]: [[contar]]
