--- a/en/倬/倬.11050.wikitext
+++ b/en/倬/倬.11050.wikitext
@@ -11,8 +11,8 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#noticeable, large
-*# clear, distinct
+*#[[noticeable]], [[large]]
+*# [[clear]], [[distinct]]
 
 
 ----
