--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -7,4 +7,5 @@
 *[[Bulgarian]]: [[зенит]] ''m''
 *[[Esperanto]]: [[zenito]]
 *[[Interlingua]]: [[zenit]]
+*[[Polish]]: [[zenit]] ''m'', [[apogeum]] ''n''
 *[[Portuguese]]: [[zênite]] ''m''
