--- a/en/倽/倽.11083.wikitext
+++ b/en/倽/倽.11083.wikitext
@@ -11,10 +11,10 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#what
-*# which
-*# who
-*# why
+*#[[what]]
+*# [[which]]
+*# [[who]]
+*# [[why]]
 
 
 ----
