--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -32,7 +32,7 @@ US English SAMPA: /dZ3`:mIni/
 *[[Polish]]: [[Niemcy]]
 *[[Portuguese]]: [[Alemanha]]
 *[[Romanian]]: [[Germania]] ''f''
-*[[Russian]]: [[Германия]] ''ж''
+*[[Russian]]: [[Германия]] ''f''
 *[[Slovak]]: [[Nemecko]] ''n''
 *[[Spanish]]: [[Alemania]]
 *[[Swedish]]: [[Tyskland]]
