--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -21,7 +21,7 @@ Country in Oceania, to the East of [[Australia]]. Official name: New Zealand.
 *[[Polish]]: [[Nowa Zelandia]]
 *[[Portuguese]]: [[Nova Zelândia]]
 *[[Romanian]]: [[Noua Zeeland&#259]] ''f''
-*[[Russian]]: [[Новая Зеландия]] ''ж''
+*[[Russian]]: [[Новая Зеландия]] ''f''
 *[[Spanish]]: [[Nueva Zelanda]] ''f''
 *[[Swedish]]: [[Nya Zeeland]]
 
