+bg <New Zealand#47380>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -1,9 +1,12 @@
+==English==
+
 ===Proper noun===
 
-Country in [[Oceania]], to the East of [[Australia]]. Official name: New Zealand.
+# Country in [[Oceania]], to the East of [[Australia]]. Official name: New Zealand.
 
 ====Translations====
 *[[Breton]]: [[Zeland-Nevez]]
+*Bulgarian: [[Нова Зеландия]]
 *Chinese: [[新西兰]]
 *Czech: [[Nový Zéland]]
 *Danish: New Zealand
