fix pron; +sense; + syn; +ru; dewikfy <speak#44177>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -1,6 +1,7 @@
 === Pronunciation ===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'spik/
+*[[w:IPA|IPA]]: /spēk/
+*[[w:IPA|IPA]]: /spiːk/
+*[[w:SAMPA|SAMPA]]: /spi:k/
 
 === Verb ===
 
@@ -15,20 +16,27 @@
 #to express without words.
 #:''Actions speak louder than words''.
 #to deliver a message to a group; to deliver a [[speech]].
+#to have the command of a language.
+#:''He speaks Klingon fluently''.
 
-=== Synonyms ===
+==== Synonyms ====
 *[[articulate]], [[talk]], [[verbalize]].
+
+==== Related terms ====
+*[[speaker]]
+*[[speech]]
 
 ==== Translations ====
 *[[Catalan]]: [[parlar]]
-*[[Dutch]]: [[spreken]]
+*Dutch: [[spreken]]
 *[[Esperanto]]: [[paroli]]
-*[[German]]: [[sprechen]]
+*German: [[sprechen]]
 *[[Guaraní]]: [[ñe'ẽ]]
-*[[Indonesian]]: [[bicara|berbicara]], [[pidato|berpidato]]
+*Indonesian: [[bicara|berbicara]], [[pidato|berpidato]]
 *[[Interlingua]]: [[parlar]]
-*[[Japanese]]: [[話す]] (はなす, hanasu)
-*[[Portuguese]]: [[falar]]
-*[[Slovenian]]: [[govoriti]]
-*[[Spanish]]: [[hablar]]
+*Japanese: [[話す]] (はなす, hanasu)
+*Portuguese: [[falar]]
+*Russian: [[говорить]] (govorit')
+*Slovenian: [[govoriti]]
+*Spanish: [[hablar]]
 *[[Tupinambá]]: [[nhe'eng]]
