--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -10,7 +10,7 @@
 *Czech: [[Česká republika]]  ''f'', [[Česko]] ''n''
 *Dutch: [[Tsjechië]]
 *Finnish: [[Tšekin tasavalta]], [[Tšekki]]
-*German: [[Tschechien]], [[Böhmen]]
+*German: [[Tschechien]]
 *Hungarian: [[Csehország]]
 *Interlngua: [[Republica Chec]]
 *Italian: la [[repubblica Ceca]] ''f''
