--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -6,17 +6,17 @@
 ==== Translations ====
 *[[Bavarian]]: [[Budda]] ''m''
 *[[Breton]]: [[amanenn]] ''m''
-*[[French]]: [[beurre]] ''m''
-*[[German]]: Butter ''f''
-*[[Greek]]: [[βούτυρο]]
+*French: [[beurre]] ''m''
+*German: Butter ''f''
+*Greek: [[βούτυρο]]
 *[[Interlingua]]: [[butyro]]
-*[[Italian]]: [[burro]] ''m''
-*[[Japanese]]: [[バター]] (batā)
-*[[Polish]]: [[masło]]
-*[[Portuguese]]: [[manteiga]] ''f''
+*Italian: [[burro]] ''m''
+*Japanese: [[バター]] (batā)
+*Polish: [[masło]]
+*Portuguese: [[manteiga]] ''f''
 *[[Romanian]]: [[Unt]] ''n''
-*[[Russian]]: [[масло]] ''n''
-*[[Spanish]]: [[mantequilla]] ''f''
+*Russian: [[масло]] (maslo) ''n''
+*Spanish: [[mantequilla]] ''f''
 
 === Transitive verb ===
 '''to butter'''
@@ -24,9 +24,9 @@
 #(with ''up'') To flatter. (''He butters the boss up at every opportunity.'')
 
 ==== Translations ====
-*[[German]]: [[mit]] Butter [[bestreichen]] (1), [[Honig]] um den [[Bart]] [[schmieren]] (2)
+*German: [[mit]] Butter [[bestreichen]] (1), [[Honig]] um den [[Bart]] [[schmieren]] (2)
 *[[Interlingua]]: [[butyrar]] (1); [[adular]] (2)
-*[[Portuguese]]: [[amanteigar]], [[passar]] [[manteiga]] [[em]] (1); [[adular]], [[bajular]] (2)
+*Portuguese: [[amanteigar]], [[passar]] [[manteiga]] [[em]] (1); [[adular]], [[bajular]] (2)
 
 ----
 ==German==
