+bg | +LWA <butter#51935>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -2,11 +2,12 @@
 === Noun ===
 '''butter'''
 
-#A kind of [[fat]] made from cow [[milk]]
+# a kind of [[fat]] made from cow [[milk]]
 
 ==== Translations ====
 *[[Bavarian]]: [[Budda]] ''m''
 *[[Breton]]: [[amanenn]] ''m''
+*Bulgarian: [[масло]] ''n''
 *Czech: [[máslo]]  ''n''
 *Dutch: [[boter]] ''f''
 *French: [[beurre]] ''m''
@@ -26,13 +27,18 @@
 '''to butter'''
 
 #To [[spread]] butter on. (''butter the toast'', ''butter the baking tin'')
-#(with ''up'') To flatter. (''He butters the boss up at every opportunity.'')
+#(with ''up'') to flatter. (''He butters the boss up at every opportunity.'')
 
 ==== Translations ====
+*Bulgarian: [[лаская]] (2)
 *Dutch: [[beboteren]] (1), [[inboteren]] (1), met boter [[besmeren]] (1), [[vleien]] (2)
 *German: [[mit]] Butter [[bestreichen]] (1), [[Honig]] um den [[Bart]] [[schmieren]] (2)
 *[[Interlingua]]: [[butyrar]] (1); [[adular]] (2)
 *Portuguese: [[amanteigar]], [[passar]] [[manteiga]] [[em]] (1); [[adular]], [[bajular]] (2)
+
+===External link===
+
+*[[en:butter|Wikipedia article on butter]]
 
 ----
 ==German==
