--- a/en/慑/慑.15717.wikitext
+++ b/en/慑/慑.15717.wikitext
@@ -12,7 +12,7 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': afraid, scared, fearful
+* '''Common Meaning''': [[afraid]], [[scared]], [[fearful]]
 
 ----
 
