--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -20,6 +20,7 @@
 ===Translations===
 *[[Dutch]]: [[recht]] (1), [[rechte]] (1), [[zoals het hoort]] (3), [[puur]] (5), [[pure]] (5)
 *[[French]]: [[droit]] ''m'' (1), [[droite]] ''f'' (1), [[comme il faut]] (3), [[pur]] (5), [[pure]] (5)
+*[[Portuguese]]: [[reto]] ''m'' (1), [[direto]] ''m'' (3), [[honesto]] ''m'' (3), [[direito]] ''m'' (4)
 *[[Swedish]]: [[rak]] (1,3,6) 
 
 ===Adverb===
@@ -39,6 +40,7 @@
 #in poker, five cards in sequence.
 ===Translations===
 *[[French]]: [[ligne droite]] ''f'' (1), [[quinte]] ''f'' (2)
+*[[Portuguese]]: [[reta]] ''f'' (1)
 *[[Swedish]]: [[raksträcka]], [[raka]]
 ===Homophone===
 *[[strait]]
