dewikification; reformatted <come#46490>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -1,51 +1,46 @@
 ==English==
 
-
 === Pronunciation ===
 *[[w:SAMPA|SAMPA]]: /'k@m/
 *[[w:IPA|IPA]]: /'kɒm/
 
 === Verb ===
-
-
-
 '''to come''' ([[came]], come)
 
-# to [[move]] from [[further]] away to [[nearer]] by
+# to [[move]] from [[further]] away to [[nearer]] to
 
-=== Translations ===
+==== Translations ====
 *[[Bavarian]]: [[kemma]]
-*[[Chinese]]: simplified Chinese:[[来]] ( ''[[pinyin]]:lái'' ) ; traditional Chinese: [[來]] ( ''pinyin:lái'' ) 
-*[[Dutch]]: [[komen]]
-*[[French]]: [[venir]]
-*[[German]]: [[kommen]]
-*[[Hebrew]]: [[לבוא]] lavo
+*Chinese: (''simplified Chinese'') [[来]] (''[[pinyin]]:lái''); (''traditional Chinese'') [[來]] ( ''pinyin:lái'' ) 
+*Dutch: [[komen]]
+*French: [[venir]]
+*German: [[kommen]]
+*Hebrew: [[לבוא]] lavo
 *[[Indonesian]]: [[datang]], [[datang|mendatangi]], [[datang|mendatang]], [[datang|mendatangkan]]
-*[[Italian]]: [[venire]]
-*[[Japanese]]: [[来る]] (くる, kuru)
+*Italian: [[venire]]
+*Japanese: [[来る]] (くる, kuru)
 *[[Manchu]]: [[jimbi]]
 
 === Verb ===
-
 '''come'''
 
-# past participle of to come
+# past participle of '''to come'''
 
-=== Translations ===
-*[[Dutch]]: [[gekomen]]
-*[[French]]: [[venu]]
+==== Translations ====
+*Dutch: [[gekomen]]
+*French: [[venu]]
 *[[Indonesian]]: [[datang]], [[datang|didatangi]], [[datang|didatangkan]], [[datang|berdatangan]]
-*[[Italian]]: [[venuto]]
-*[[Japanese]]: [[来た]] (きた, kita)
+*Italian: [[venuto]]
+*Japanese: [[来た]] (きた, kita)
 *[[Manchu]]: [[jihe]]
 
 ==Italian==
-===adverb===
+===Adverb===
 # how          
-#:''Come stai ?'' : ''How are you ?''
-# as , like
-#:''Blu come il mare'' : ''Blue as the sea''
+#:''Come stai?'' - How are you?
+# as, like
+#:''Blu come il mare'' - As blue as the sea; blue like the sea
 
-===conjunction===
-# as soon as   
-#:''come arrivò'' : ''as soon as he arrived''
+===Conjunction===
+# [[as soon as]]
+#:''Come arrivò...'' - As soon as he arrived...
