Corrected IPA <come#46493>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -2,7 +2,7 @@
 
 === Pronunciation ===
 *[[w:SAMPA|SAMPA]]: /'k@m/
-*[[w:IPA|IPA]]: /'kɒm/
+*[[w:IPA|IPA]]: /'kʌm/
 
 === Verb ===
 '''to come''' ([[came]], come)
