correct SAMPA <come#46503>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 === Pronunciation ===
-*[[w:SAMPA|SAMPA]]: /'k@m/
+*[[w:SAMPA|SAMPA]]: /'kVm/
 *[[w:IPA|IPA]]: /'kʌm/
 
 === Verb ===
