improve pron; separate language entries; fmt <come#46545>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -1,13 +1,19 @@
 ==English==
-
 === Pronunciation ===
-*[[w:SAMPA|SAMPA]]: /'kVm/
-*[[w:IPA|IPA]]: /'kʌm/
+*[[w:AHD|AHD]]: /kŭm/
+*[[w:IPA|IPA]]: /kʌm/
+*[[w:SAMPA|SAMPA]]: /kVm/
+
+====Homophones====
+*[[cum]]
 
 === Verb ===
 '''to come''' ([[came]], come)
 
-# to [[move]] from [[further]] away to [[nearer]] to
+# to move from further away to nearer to.
+
+==== Antonyms ====
+*[[go]]
 
 ==== Translations ====
 *[[Bavarian]]: [[kemma]]
@@ -15,7 +21,7 @@
 *Dutch: [[komen]]
 *French: [[venir]]
 *German: [[kommen]]
-*Hebrew: [[לבוא]] lavo
+*Hebrew: [[לבוא]] (lavo)
 *[[Indonesian]]: [[datang]], [[datang|mendatangi]], [[datang|mendatang]], [[datang|mendatangkan]]
 *Italian: [[venire]]
 *Japanese: [[来る]] (くる, kuru)
@@ -33,6 +39,8 @@
 *Italian: [[venuto]]
 *Japanese: [[来た]] (きた, kita)
 *[[Manchu]]: [[jihe]]
+
+----
 
 ==Italian==
 ===Adverb===
