--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -26,6 +26,7 @@
 *Italian: [[venire]]
 *Japanese: [[来る]] (くる, kuru)
 *[[Manchu]]: [[jimbi]]
+*Spanish: [[venir]]
 
 === Verb ===
 '''come'''
@@ -39,6 +40,7 @@
 *Italian: [[venuto]]
 *Japanese: [[来た]] (きた, kita)
 *[[Manchu]]: [[jihe]]
+*Spanish: [[venido]]
 
 ----
 
@@ -52,3 +54,16 @@
 ===Conjunction===
 # [[as soon as]]
 #:''Come arrivò...'' - As soon as he arrived...
+
+----
+
+==Spanish==
+===Etymology===
+Latin [[comede]] (imperative), [[comedit]] (present).
+
+===Pronunciation===
+*SAMPA /"kome/
+
+===Verb===
+# third person singular present tense of [[comer]] 'to eat'
+# second person singular imperative of [[comer]]
