--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -16,6 +16,7 @@
 *French: [[Nouvelle-Zélande]] ''f''
 *German: [[Neuseeland]] ''n''
 *Greek: [[Νέα Ζηλανδία]]
+*[[Indonesian]]: [[Selandia Baru]]
 *[[Interlingua]]: [[Nove Zelanda]]
 *Italian: [[Nuova Zelanda]]
 *Japanese: [[ニュージーランド]] (nyūjīrando)
