--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -5,7 +5,7 @@
 #To act in a manner such that one would have [[fun]].
 #To engage in activities expressly for the purpose of recreation.
 
-=== Translations ===
+====Translation ====
 *[[Dutch]]: [[spelen]]
 *[[Esperanto]]: [[ludi]]
 *[[French]]: [[jouer]]
@@ -15,7 +15,11 @@
 *[[Italian]]: [[giocare]]
 *[[Portuguese]]: [[jogar]]
 *[[Spanish]]: [[jugar]]
+*[[Swedish]]: [[leka]], [[spela]]
 *[[Tupinambá]]: [[nhemosaraîa]]
 
 ===Noun===
 #A theatrical performance.
+
+====Translations====
+*[[Swedish]]: [[pjäs]]
