--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -1,25 +1,29 @@
-Abbreviation: USA
+===Proper noun===
+'''[[United]] [[State]]s of [[America]]'''
+
+====Abbreviation====
+*[[USA]]
 
 # Country in North America.
 #:'''Translations'''
 #:*[[Breton]]: [[Stadoù-Unanet Amerika]] ''f, pl'', short : [[SUA]]
-#:*[[Bulgarian]]: [[Съединени Американски Щати]], short: [[САЩ]]
+#:*Bulgarian: [[Съединени Американски Щати]], short: [[САЩ]]
 #:*[[Catalan]]: [[Estats Units d'Amèrica]] ''m''
-#:*[[Chinese]]: simplified Chinese:[[美利坚合众国]] ( ''[[pinyin]]: Měilìjiān Hézhòngguó'' ), [[美国]] ( ''pinyin: Měiguó'' ) ; traditional Chinese:[[美利堅合衆國]] ( ''pinyin: Měilìjiān Hézhòngguó'' ), [[美國]] ( ''pinyin: Měiguó'') 
-#:*[[Dutch]]: [[Verenigde Staten van Amerika]] ''f, pl'', abbreviation: VSA
+#:*Chinese: simplified Chinese:[[美利坚合众国]] ( ''[[pinyin]]: Měilìjiān Hézhòngguó'' ), [[美国]] ( ''pinyin: Měiguó'' ) ; traditional Chinese:[[美利堅合衆國]] ( ''pinyin: Měilìjiān Hézhòngguó'' ), [[美國]] ( ''pinyin: Měiguó'') 
+#:*Dutch: [[Verenigde Staten van Amerika]] ''f, pl'', abbreviation: [[VSA]]
 #:*[[Esperanto]]: [[Unuiĝintaj Ŝtatoj de Ameriko]]
-#:*[[Finnish]]: [[Amerikan Yhdysvallat]], short: [[Yhdysvallat]], very short: [[USA]]
-#:*[[French]]: [[États-Unis d'Amérique]] ''m, pl''
+#:*Finnish: [[Amerikan Yhdysvallat]], short: [[Yhdysvallat]], very short: [[USA]]
+#:*French: [[États-Unis d'Amérique]] ''m, pl''
 #:*[[Frisian]]: [[Feriene Steaten fan Amearika]]
-#:*[[German]]: [[Vereinigte Staaten von Amerika]], short: [[USA]]
-#:*[[Hebrew]]: [[ארצות הברית]],(Artzot Habrit) Short: ארה"ב
-#:*[[Indonesian]]: [[Amerika Serikat]]
-#:*[[Japanese]]: [[米国]] (べいこく, beikoku)
-#:*[[Korean]]: [[미국]] South: [美國] North: [米國] (mi-gwuk)
-#:*[[Polish]]: [[Stany Zjednoczone Ameryki]], short: [[Stany Zjednoczone]], full: [[Stany Zjednoczone Ameryki Północnej]], colloquial: [[Stany]]
-#:*[[Romanian]]: [[Statele Unite ale Americii]], short: [[Statele Unite]], very short: [[SUA]]
-#:*[[Russian]]: [[Соединённые Штаты Америки]], short: [[США]]
-#:*[[Spanish]]: [[Estados Unidos de América]] ''m'' abbreviation: EEUU
-#:*[[Swedish]]: [[Amerikas förenade stater]]
-#:*[[Vietnamese]]: Hợp Chủng Quốc Hoa Kỳ, short: Mỹ, abbreviation: HK
+#:*German: [[Vereinigte Staaten von Amerika]], short: [[USA]]
+#:*Hebrew: [[ארצות הברית]],(Artzot Habrit) Short: [[ארה״ב]]
+#:*Indonesian: [[Amerika Serikat]]
+#:*Japanese: [[米国]] (べいこく, beikoku)
+#:*Korean: [[미국]] South: [美國] North: [米國] (mi-gwuk)
+#:*Polish: [[Stany Zjednoczone Ameryki]], short: [[Stany Zjednoczone]], full: [[Stany Zjednoczone Ameryki Północnej]], colloquial: [[Stany]]
+#:*Romanian: [[Statele Unite ale Americii]], short: [[Statele Unite]], very short: [[SUA]]
+#:*Russian: [[Соединённые Штаты Америки]], short: [[США]]
+#:*Spanish: [[Estados Unidos de América]] ''m'' abbreviation: [[EEUU]]
+#:*Swedish: [[Amerikas förenade stater]]
+#:*Vietnamese: [[Hợp Chủng Quốc Hoa Kỳ]], short: [[Mỹ]], abbreviation: [[HK]]
 ''See:'' [[Countries of the world]]
