--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -1,5 +1,6 @@
 ==English==
-
+===Etymology===
+:From '''Dutch''': "Nieuw Zeeland" meaning ''new'' ''Zeeland'' after the Dutch settlement in Batavia, which, in turn, had been named after the Dutch province of [[Zeeland]].
 ===Proper noun===
 
 # Country in [[Oceania]], to the East of [[Australia]]. Official name: New Zealand.
@@ -34,3 +35,4 @@
 *[[Aotearoa]]
 ===See also===
 [[Countries of the world]]
+[[w:New Zealand|Wikipedia article about New Zealand]]
