--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -34,5 +34,5 @@
 ====Related words====
 *[[Aotearoa]]
 ===See also===
-[[Countries of the world]]
-[[w:New Zealand|Wikipedia article about New Zealand]]
+*[[Countries of the world]]
+*[[w:New Zealand|Wikipedia article about New Zealand]]
