--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -1,31 +1,39 @@
 ==English==
+===Pronunciation===
+*[[w:AHD|AHD]]: ĭz'rāəl
+*[[w:IPA|IPA]]: /ˈɪzreɪəl/
+*[[w:SAMPA|SAMPA]]: /"IzreI@l/
 
-'''proper noun'''
+===Proper noun===
+'''Israel'''
+
+====Related terms====
+*[[Israeli]]
 
 # Country in the [[Middle East]], located at eastern [[shore]] of the [[Mediterranean]]. Official name: State of Israel.
 #:'''Translations'''
-#:*[[Breton]]: [[Israel]]
-#:*[[Catalan]]: [[Israel]] ''m''
-#:*[[Chinese]]: [[以色列]]
-#:*[[Czech]]: [[Izrael]]
-#:*[[Danish]]: Israel
-#:*[[Dutch]]: [[Israël]]
+#:*[[Breton]]: Israel
+#:*[[Catalan]]: Israel ''m''
+#:*Chinese: [[以色列]]
+#:*Czech: [[Izrael]]
+#:*Danish: Israel
+#:*Dutch: [[Israël]]
 #:*[[Esperanto]]: [[Israelo]]
-#:*[[Finnish]]: Israel
-#:*[[French]]: [[Israël]]
-#:*[[German]]: Israel
-#:*[[Greek]]: [[Ισραήλ]]
-#:*[[Hebrew]]: [[ישראל]]
-#:*[[Indonesian]]: Israel
+#:*Finnish: Israel
+#:*French: [[Israël]]
+#:*German: Israel
+#:*Greek: [[Ισραήλ]]
+#:*Hebrew: [[ישראל]]
+#:*Indonesian: Israel
 #:*[[Interlingua]]: Israel
-#:*[[Italian]]: [[Israele]]
-#:*[[Japanese]]: [[イスラエル]] (isuraeru)
-#:*[[Polish]]: [[Izrael]]
-#:*[[Portuguese]]: Israel
-#:*[[Romanian]]: [[Israel]] ''n''
-#:*[[Russian]]: [[Израиль]]
-#:*[[Spanish]]: Israel
-#:*[[Swedish]]: Israel
+#:*Italian: [[Israele]]
+#:*Japanese: [[イスラエル]] (isuraeru)
+#:*Polish: [[Izrael]]
+#:*Portuguese: Israel
+#:*Romanian: Israel ''n''
+#:*Russian: [[Израиль]] (Izraily)
+#:*Spanish: Israel
+#:*Swedish: Israel
 
 ''See'': [[Countries of the world]]
 
