--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -1,14 +1,13 @@
-=== Verb ===
+=== Pronunciation ===
+*[[w:IPA|IPA]]: /tʃuːz/
+*[[w:SAMPA|SAMPA]]: /tSu:z/
 
+=== Verb ===
 '''to choose''' ([[chose]], [[chosen]])
 
 # to [[elect]], [[pick]]
 
-=== Pronunciation ===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'ʧus/, /'ʧuz/
-
 === Translations ===
-*[[Dutch]]: [[kiezen]]
-*[[Indonesian]]: [[pilih]], [[pilah]], [[pilih|memilih]]
-*[[Japanese]]: [[選ぶ]] ([[えらぶ]], erabu)
+*Dutch: [[kiezen]]
+*Indonesian: [[pilih]], [[pilah]], [[pilih|memilih]]
+*Japanese: [[選ぶ]] ([[えらぶ]], erabu)
