--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -1,13 +1,14 @@
-'''Het''' /het/ (Dutch)
+==Dutch==
+===Definite article===
+'''het'''
 
-[[Definite article]], placed before [[neuter]] nouns, indicating a specific person or thing instead of the general case: [[the]]. Compare with [[de]] and [[een]].
+# placed before [[neuter]] nouns, indicating a specific person or thing instead of the general case. Compare with [[de]] and [[een]].
 
 === Examples === 
 
 ''Het boek'': the book; ''het meisje'': the girl.
 
-Note about [[grammatical gender in Dutch]]: all [[diminuitive|diminuitives]] are automatically neuter; however, sex takes precedence in all the pronouns. Compare ''het kopje en zijn schotel'' (the (little) cup and '''its''' saucer) with ''het meisje en haar hoed'' (the (little) girl and '''her''' hat).
+Note about [[grammatical gender in Dutch]]: all [[diminutive|diminutives]] are automatically neuter; however, sex takes precedence in all the pronouns. Compare ''het kopje en zijn schotel'' (the (little) cup and '''its''' saucer) with ''het meisje en haar hoed'' (the (little) girl and '''her''' hat).
 
-=== Translations ===
-
-en: [[the]]
+==== Translations ====
+English: [[the]]
