--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -23,3 +23,4 @@ Plural
 #a geographical region, politically independent from other regions.
 ====Translations====
 * English: [[country]]
+* Russian: [[страна]]
