+fr, de, es; +verbal sense <bridge#55405>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -1,7 +1,16 @@
 === Noun ===
-'''bridge'''
+'''bridge''' (plural: [[bridges]])
 
-=== Translations ===
+==== Related terms ====
+*[[drawbridge]]
+
+==== Translations ====
 *[[Breton]]: [[pont]] ''m'' -où
-*[[Indonesian]]: [[jembatan]]
-*[[Japanese]]: [[橋]] ([[はし]], hashi)
+*French: [[pont]]
+*German: [[Brucke]]
+*Indonesian: [[jembatan]]
+*Japanese: [[橋]] ([[はし]], hashi)
+*Spanish: [[puente]]
+
+===Verb===
+'''to bridge'''
