--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -19,4 +19,4 @@ Asia is a large continent, with many large nations (e.g., China, India and Japan
 *French: [[par ex.]] (''[[par exemple]]'')
 *German: [[z.B.]] (''[[zum Beispiel]]'')
 *Italian: [[ad es.]] (''[[ad esempio]]'')
-*Swedish: [[t.ex.]], [[t ex]], [[tex.]] [[t. ex.]] (''till exempel''), [[exempelvis]]
+*Swedish: [[t.ex.]], [[t ex]], [[tex.]] [[t. ex.]] (''[[till exempel]]''), [[exempelvis]]
