--- a/en/c/chose.6833.wikitext
+++ b/en/c/chose.6833.wikitext
@@ -12,6 +12,7 @@
 *French: [[choisissait]] etc...
 *Indonesian: [[pilih]], [[pilah]], [[pilih|memilih]]
 *Japanese: [[選んだ]] ([[えらんだ]], eranda)
+*Swedish: [[valde]]
 
 ----
 
