--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -7,8 +7,8 @@
 ====Translations====
 *Bulgarian: [[зенит]] ''m''
 *Esperanto: [[zenito]]
-*{{msg:fi}}: [[huippukohta]], [[zeniitti]] (about sky)
-*{{msg:de}}: [[Zenit]] ''m''
+*{{fi}}: [[huippukohta]], [[zeniitti]] (about sky)
+*{{de}}: [[Zenit]] ''m''
 *Interlingua: [[zenit]]
 *Italian: [[zenit]] ''m''
 *Japanese: [[絶頂]], [[頂点]]
