--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -34,17 +34,17 @@ Term meaning "What a mess!" or "What a screw-up!"
 *[[Breton]]: [[brav]], [[kaer]]
 *Dutch: [[mooi]]
 *[[Esperanto]]: [[bela]]
-*{{msg:fi}}: [[kaunis]]
-*{{msg:fr}}: [[beau]] ''m'', [[belle]] ''f''
+*{{fi}}: [[kaunis]]
+*{{fr}}: [[beau]] ''m'', [[belle]] ''f''
 *[[Frisian]]: [[moai]], [[kreas]]
-*{{msg:de}}: [[schön]]
+*{{de}}: [[schön]]
 *Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
-*{{msg:it}}: [[bello]]
-*{{msg:ja}}: [[美しい]] ([[うつくしい]], utsukushii), [[綺麗]] ([[きれい]], kirei), [[素敵]] ([[すてき]], suteki)
-*{{msg:la}}: [[pulcher]], [[formosus]] ''m'', [[bellus]] ''m''
+*{{it}}: [[bello]]
+*{{ja}}: [[美しい]] ([[うつくしい]], utsukushii), [[綺麗]] ([[きれい]], kirei), [[素敵]] ([[すてき]], suteki)
+*{{la}}: [[pulcher]], [[formosus]] ''m'', [[bellus]] ''m''
 *[[Polish]]: [[piękny]]
-*{{msg:pt}}: [[bonito]] ''m'', [[bonita]] ''f''
+*{{pt}}: [[bonito]] ''m'', [[bonita]] ''f''
 *[[Romanica]]: [[bello]] ''m'', [[bella]] ''f''
-*{{msg:ru}}: [[красивый]]
-*{{msg:es}}: [[hermoso]] ''m'', [[hermosa]] ''f'', ''[[bello]]'', ''[[lindo]]'', ''[[chico]]''
-*{{msg:sv}}: [[vacker]]
+*{{ru}}: [[красивый]]
+*{{es}}: [[hermoso]] ''m'', [[hermosa]] ''f'', ''[[bello]]'', ''[[lindo]]'', ''[[chico]]''
+*{{sv}}: [[vacker]]
