--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -8,6 +8,7 @@
 *Bulgarian: [[зенит]] ''m''
 *Esperanto: [[zenito]]
 *{{fi}}: [[huippukohta]], [[zeniitti]] (about sky)
+*French: [[zénith]] ''m''
 *{{de}}: [[Zenit]] ''m''
 *Interlingua: [[zenit]]
 *Italian: [[zenit]] ''m''
