--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -38,7 +38,7 @@
 *Russian: [[Израиль]] (Izraily)
 *Spanish: Israel
 *Swedish: Israel
-*Turkish: İsrail
+*Turkish: [[İsrail]]
 
 ===See also===
 *[[Countries of the world]]
