--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -6,7 +6,7 @@
 
 '''found'''
 
-# past tense of to [[find]]
+# past tense of to '''[[find]]'''
 
 === Translations ===
 *[[Dutch]]: [[vond]], [[vonden]]
