--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -21,6 +21,7 @@
 *Portuguese: [[tartaruga]] ''f''
 *Romanian: [[ţestoasă]] ''f'', [[broască ţestoasă]] ''f''
 *Russian: [[черепаха]]
+*Slovene: [[kopenska želva]] ''f''
 *Spanish: [[tortuga]] ''f''
 *Swedish: [[sköldpadda]]
 
