--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -17,7 +17,7 @@
 *German: [[Schildkröte]] ''f''
 *Indonesian: [[kura-kura]]
 *Italian: [[tartaruga]] ''f''
-*Japanese: [[亀]] ([[かめ]], kame)
+*Japanese: [[亀]] ([[かめ]], kame), [[陸亀]] ([[りくがめ]], rikugame)
 *Portuguese: [[tartaruga]] ''f''
 *Romanian: [[ţestoasă]] ''f'', [[broască ţestoasă]] ''f''
 *Russian: [[черепаха]]
