/* Translations */ <United States of America#88701>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -29,6 +29,7 @@
 *Russian: [[Соединённые Штаты Америки]], short: [[США]]
 *Spanish: [[Estados Unidos de América]] ''m'' abbreviation: [[EEUU]]
 *Swedish: [[Amerikas förenade stater]]
+*Turkish: [[Amerika Birleşik Devletleri]], abbreviation: [[ABD]]
 *Vietnamese: [[Hợp Chủng Quốc Hoa Kỳ]], short: [[Mỹ]], abbreviation: [[HK]]
 
 ===See also===
