--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -15,9 +15,11 @@
 *Japanese: [[橋]] ([[はし]], hashi)
 *[[Old English]]: [[brycg]] ''f''
 *Spanish: [[puente]]
+*Swedish: [[bro]] ''c''
 
 ===Verb===
 '''to bridge''' ([[bridges]], [[bridged]], [[bridging]])
 
 ====Translations====
 *Finnish: [[sillata]]
+*Swedish: [[överbrygga]] <!-??->
