/* [[Translation]]s */ fi <substance#213144>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -14,6 +14,7 @@ From Latin ''[[substantia]]'', '''substance''' or '''essense''', noun form from 
 ====[[Translation]]s====
 *[[Catalan]]: [[substància]] ''f'' (1), [[essència]] ''f'' (2), [[recursos]] ''m pl'' (3)
 *[[Dutch]]: [[substantie]] ''f''
+*[[Finnish]]: [[aine]] (1, 4),  [[substanssi]] (1 in science)
 *[[French]]: substance ''f''
 *[[German]]: [[Substanz]] ''f''
 *[[Interlingua]]: [[substantia]] (1,3); [[essentia]] (2); [[ressources]] ''pl'' (3)
