--- a/en/昂/昂.16938.wikitext
+++ b/en/昂/昂.16938.wikitext
@@ -36,12 +36,19 @@
 
 == [[Japanese]] [[Kanji]] ==
 
-* '''Readings'''
-** '''[[On]]''': [[こう]] (kō), [[ごう]] (gō)
-** '''[[Kun]]''': [[あがる]] (agaru), [[たかい]] (takai)
-
-* '''Other info''':  
-
+===Readings===
+* '''[[On]]''': [[こう]] (kō), [[ごう]] (gō)
+* '''[[Kun]]''': [[あがる]] (agaru), [[たかい]] (takai)
+===Compounds===
+*[[意気軒昂]] ([[いきけんこう]], ikikenkō)
+*[[軒昂]] ([[けんこう]], kenkō)
+*[[激昂]] ([[げきこう]], gekikō ''and'' [[げっこう]], gekkō)
+*[[昂進]] ([[こうしん]], kōshin)
+*[[昂然]] ([[こうぜん]], kōzen)
+*[[昂騰]] ([[こうとう]], kōtō)
+*[[昂奮]] ([[こうふん]], kōfun)
+*[[昂揚]] ([[こうよう]], kōyō)
+*[[心悸昂進]] ([[しんきこうしん]], shinkikōshin)
 ----
 
 == [[Korean]] [[Hanja]] ==
