--- a/en/圹/圹.12987.wikitext
+++ b/en/圹/圹.12987.wikitext
@@ -13,13 +13,12 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#tomb, grave: prairie
+*# [[tomb]], [[grave]]: prairie
 *# open wilderness
-
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,6 +32,9 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[壙]]
+
+===Compounds===
+*[[圹穴]]
 
 * '''Other info''': 
 
