--- a/en/傑/傑.11170.wikitext
+++ b/en/傑/傑.11170.wikitext
@@ -13,13 +13,12 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#hero
-*# outstanding, remarkable
-
+*# [[hero]]
+*# [[outstanding]], [[remarkable]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -38,11 +37,17 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[けつ]] (ketsu)
 ** '''[[Kun]]''': [[すぐれる]] (sugureru)
+
+===Compounds===
+*[[傑作]]
+*[[傑士]]
+*[[傑出]]
+*[[傑物]]
 
 * '''Other info''':  
 
