fmt; modified def; +it:, vi, n, extra senses; some der <pull#131878>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -1,11 +1,82 @@
-=== Verb ===
+===Transitive verb===
+'''to pull''' ('''pulling''', '''pulled''', '''pulled''')
 
-'''to pull'''
+#To apply a [[force]] to (an object) such that it comes [[toward]] the person applying the force.
+#(''slang'') To persuade (someone) to have sex with one.
+#:''He's pulled that bird over there.''
 
-#To apply a [[force]] such that an object comes [[toward]] you.
+====Synonyms====
+*(''apply force to''): [[drag]], [[tow]], [[tug]]
+*(''slang: persuade to have sex with one''):
 
-=== Translations ===
-*[[Dutch]]: [[trekken]]
-*[[French]]: [[tirer]]
-*[[German]]: [[ziehen]]
-*[[Polish]]: [[ciągnąć]], [[pociągnąć]]
+====Antonyms====
+*(''apply force to''): [[push]], [[shove]]
+
+====Translations====
+
+'''apply force to'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*Dutch: [[trekken]]
+*French: [[tirer]]
+*German: [[ziehen]]
+*Italian: [[tirare]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+*Polish: [[ciągnąć]], [[pociągnąć]]
+|}
+|}
+
+'''slang: persuade (a person) to have sex with one
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+===Intransitive verb===
+'''to pull''' ('''pulling''', '''pulled''', '''pulled''')
+
+#To apply a [[force]] such that an object comes [[toward]] the person applying the force.
+#:''You're going to have to pull harder to get that cork out of the bottle.''
+
+====Translations====
+
+'''apply force'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[tirer]]
+*Italian: [[tirare]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+===Noun===
+'''pull''' (''plural'' '''pulls''')
+
+#An act of pulling.
+#:''He gave the ingrowing hair a sharp pull and it came out.''
+
+===Derived terms===
+*[[on the pull]]
+*[[pullover]]
