--- a/en/愴/愴.15687.wikitext
+++ b/en/愴/愴.15687.wikitext
@@ -20,7 +20,7 @@
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': chuàng (chuang4)
+*** '''[[Pinyin]]''': chuàng (chuang4) --
 *** '''[[Wade-Giles]]''': ch'uang<sup>4</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
