--- a/en/p/Pythonesque.2111.wikitext
+++ b/en/p/Pythonesque.2111.wikitext
@@ -1,6 +1,6 @@
 ==English==
+===Adjective===
+#Surreal,absurd Humour
 
-1)Surreal,absurd Humour
-
-==Etymology==
+===Etymology===
 From the name of the British comedy and due to the type of humour in it Monty Python's Flying Circus
