--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -42,6 +42,7 @@
 *[[Guaraní]]: [[sunu]]
 *Indonesian: [[gelegar]]
 *[[Interlingua]]: [[tonar]]
+*Norwegian: [[tordne]]
 *Polish: [[zagrzmieć]] ''perf'', [[grzmieć]] ''imperf''
 *Portuguese: [[troar]], [[trovejar]]
 *[[Tupinambá]]: [[sunung]]
