--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -29,6 +29,7 @@
 *[[Old English]]: [[brycg]] ''f''
 *Korean: [[다리]] (da-ri), [[Hanja]]: [[교]] (kyo, used always as suffix)
 *Latvian: [[tilts]] ''m''
+*[[Polish]]: most ''m''
 *Spanish: [[puente]] ''f''
 *Swedish: [[bro#Swedish|bro]] ''c''
 *Turkish: [[köprü]]
@@ -48,7 +49,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Latvian: [[bridžs]] ''m''
-*Polish: [[brydż]]
+*[[Polish]]: brydż ''m''
 *Swedish: bridge
 *Turkish: briç
 |}
