/* Verb */ === Derived Terms=== <cut#131914>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -10,6 +10,10 @@
 # to perform an [[incision]] with for example a [[knife]] ("I cut the skin on my arm")
 # to separate from prior association ("Travis was cut from the team")
 
+=== Derived Terms===
+*[[cutting edge]]
+*[[cutting remark]]
+
 === Translations ===
 *[[Dutch]]: [[snijden]]
 *[[Esperanto]]: [[tondi]]
