--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -1,5 +1,5 @@
 === Noun ===
-'''curtain''' ([[curtains]])
+A piece of [[cloth]] with which one usually [[cover]]s a [[window]] to keep the [[sun]] from shining inside.
 
 ====Related terms====
 *[[curtain call]]
@@ -8,6 +8,7 @@
 ==== Translations ====
 *Finnish: [[verho]]
 *French: [[rideau]] ''m''
+*German: [[Vorhang]] ''m''
 *Indonesian: [[serambi]], [[korden]], [[layar]]
 *Japanese: [[カーテン]] (kāten)
 *Slovak: [[opona]] ''f''
