--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -62,6 +62,7 @@
 {|
 <!--Put translations for languages from A to I here-->
 *French: [[tirer]]
+*German: [[ziehen]] [[:de:ziehen|(de)]]
 *Italian: [[tirare]]
 |}
 | width=1% |
