--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -13,3 +13,4 @@
 *[[Polish]]: [[żołądek]] ''m''
 *[[Russian]]: [[желудок]] ''m'' (želúdok)
 *[[Spanish]]: [[estómago]] ''m''
+*[[Portuguese]]: [[estômago]] ''m''
