--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -2,7 +2,7 @@
 ===Proper noun===
 '''France'''
 
-# Country in Western Europe. Member state of the [[European Union]]. Official name: [[French Republic]] ([[République Française]]).
+# Country in Western Europe. Member state of the [[European Union]]. Official name: [[French Republic]] ([[République Française]]). 62 million unhabitants
 
 ====Related terms====
 *[[Francophone]]
