other senses <come#157907>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -1,4 +1,5 @@
 ==English==
+
 === Pronunciation ===
 *[[w:AHD|AHD]]: /kŭm/
 *[[w:IPA|IPA]]: /kʌm/
@@ -7,9 +8,8 @@
 ====Homophones====
 *[[cum]]
 
-=== Verb ===
-'''to come''' ([[came]], come)
-
+===Verb===
+'''to come''' ([[comes]], [[came]], [[coming]])
 # to move from further away to nearer to.
 
 ==== Antonyms ====
@@ -32,7 +32,6 @@
 
 === Verb ===
 '''come'''
-
 # past participle of '''to come'''
 
 ==== Translations ====
