robot  Adding:it <fought#247531>

--- a/en/f/fought.6880.wikitext
+++ b/en/f/fought.6880.wikitext
@@ -25,3 +25,5 @@
 *[[German]]: [[gekämpft]]
 *[[Indonesian]]: [[tarung]], [[tengkar]], [[serang]]
 *[[Japanese]]: [[戦った]] / [[闘った]] ([[たたかった]], tatakatta), [[対決]] ([[たいけつ]]した, taiketsu-shita), [[喧嘩]]した ([[けんか]]した, kenka-shita)
+
+[[it:fought]]
