confirmed french translation of intrans. v. <play#160414>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -67,6 +67,7 @@
 {|
 <!--languages from A to I go here-->
 *{{fi}}: [[pelata]]
+*{{fr}}: [[jouer]] à
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -82,6 +83,7 @@
 {|
 <!--languages from A to I go here-->
 *{{fi}}: [[soittaa]]
+*{{fr}}: [[jouer]] de
 *{{it}}: [[suonare]]
 |}
 | width=1% |
@@ -108,9 +110,6 @@
 
 '''Translations to be checked'''
 *Arabic: (1) [[يعزف]]  (2), [[يتمرن]]
-*French: jouer à (1), jouer de (2)
-*:They're playing cards - ''Ils jouent aux cartes''
-*:I play the piano - ''Je joue du piano''
 * Slovak: [[hrať]]
 *Slovene: [[igrati]] (1, 2)
 *Spanish: [[jugar]] a (1), [[jogar]] (2) ('''or "jugar de/a"?''') , [[tocar]] (2)
