--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -7,6 +7,9 @@
 #a person of fair skin and hair (usually spelled "''blonde''" when referring to a woman).
 #a [[pale]] [[golden]] [[brown]] [[colour]].
 
+==== Translations ====
+*Swedish: [[blondin]] 
+
 === Adjective ===
 #of a bleached, or pale golden colour.
 #of a blond complexion (referring to a person)
@@ -14,12 +17,15 @@
 ===Alternate spelling===
 :[[blonde]]
 
+====Translations====
+*Swedish: [[blond#Swedish|blond]]
+
 ===Related words===
 :''See'' [[Wiktionary_Appendix:Colours|Appendix:Colours]]
 
 ----
 
-==[[Dutch]]==
+==Dutch==
 
 === Adjective ===
 
@@ -27,7 +33,15 @@
 
 # of light colour, usually said about light hair colour, but it can also refer to beer
 
+----
+== Swedish ==
+=== Adjective ===
+'''blond'''
+
+# of light hair colour.
+
 [[Category:English colors]]
 
 [[gl:Blond]]
 [[pl:Blond]]
+[[sv:blond]]
