/* Translations */ <New Zealand#190243>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -16,7 +16,7 @@ From Dutch '''"[[Nieuw Zeeland]]"''' meaning '''"new Zeeland"''' after the Dutch
 *[[Bosnian]]: Novi Zeland ''m''
 *[[Breton]]: [[Zeland-Nevez]]
 *Bulgarian: [[Нова Зеландия]]
-*Chinese: [[新西兰]]
+*Chinese: [[新西蘭]]/[[新西兰]], [[紐西蘭]]
 *Czech: [[Nový Zéland]]
 *Danish: New Zealand
 *Dutch: [[Nieuw-Zeeland]]
@@ -29,7 +29,7 @@ From Dutch '''"[[Nieuw Zeeland]]"''' meaning '''"new Zeeland"''' after the Dutch
 *[[Indonesian]]: [[Selandia Baru]]
 *[[Interlingua]]: [[Nove Zelanda]]
 *Italian: [[Nuova Zelanda]]
-*Japanese: [[ニュージーランド]] (Nyū Jīrando)
+*Japanese: [[ニュージーランド]], [[新西蘭]] (Nyū Jīrando)
 *Latin:  [[Nova Zelanda]]
 *[[Maori]]: [[Aotearoa]], [[Niu Tireni]]
 *Polish: [[Nowa Zelandia]]
