--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -18,6 +18,7 @@
 {|
 <!--languages from A to I go here-->
 *{{ar}}: [[يلعب]]
+*{{cn}}: [[玩]] (wán)
 *{{nl}}: [[spelen]]
 *{{eo}}: [[ludi]]
 *{{fi}}: [[leikkiä]] (1), [[pelata]](1), [[soittaa]] (2), [[näytellä]] (3)
@@ -32,7 +33,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from J to Z go here-->
-*{{ja}}: [[asobu 遊ぶ]]
+*{{ja}}: [[遊ぶ]] (asobu)
 *{{pt}}: [[jogar]]
 *{{ru}}: [[играть]]
 *{{sk}}: [[hrať sa]]
