kanji-only cat <圷#253447>

--- a/en/圷/圷.12985.wikitext
+++ b/en/圷/圷.12985.wikitext
@@ -14,7 +14,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': 
@@ -35,3 +35,5 @@
 * '''Unicode''':
 ** Hex: 5737
 ** Decimal: 22327
+
+[[Category:Japanese-only CJKV Characters|土+03]]
