--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -1,7 +1,7 @@
 ===[[Noun]]===
 #the saffron crocus plant, ''Crocus sativus''.
-#a [[seasoning]] made from [[stamen]]s of the saffron plant.
-#a [[dye]] made from [[stamen]]s of the saffron plant.
+#a [[seasoning]] made from the [[stigma]]ta of the saffron plant.
+#a [[dye]] made from the [[stigma]]ta of the saffron plant.
 #an [[orange]]-[[yellow]] [[color|colour]].
 :''See also'' Wikipedia: [[w:saffron|saffron]]
 
