/* Synonyms */ +third sense <pull#212884>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -10,8 +10,9 @@
 #:''Each day, they pulled the old bread and set out fresh loaves.''
 
 ====Synonyms====
-*(''apply force to''): [[drag]], [[tow]], [[tug]]
+*(''apply force to''): [[drag]], [[tow]], [[tug]], [[yank]]
 *(''slang: persuade to have sex with one''):
+*(''remove from circulation''): [[yank]], [[recall]]
 
 ====Antonyms====
 *(''apply force to''): [[push]], [[shove]]
